--- a/progression-practice.html
+++ b/progression-practice.html
@@ -44,6 +44,7 @@
     <p class="m-4">Here are some suggestions to make the most of your practice time:</p>
 
     <!--This might also be a good place to do something creative with hiding and showing content -->
+    <!--Or perhaps a carousel or something. -->
 
     <p class="m-4">Build a habit. If you can find a specific and duration to write everyday, you will be much more likely to actually do it.</p>
 
