--- a/reflection-practice.html
+++ b/reflection-practice.html
@@ -38,38 +38,29 @@
     </ul>
 
     <h1 class="text-center">Reflection</h1>
-    <h2 class="text-center">Lesson 1: Feedback</h2>
+    <h2 class="text-center">Lesson 3: Practice!</h2>
 
-    <p class="m-4">Writing is like music: It makes no sense to play so that no one can hear. The only time you should ever write for no one else to see it is if you keeping a journal for the purposes of seeing personal progress. Barring that, it makes ZERO sense to keep your work hidden.</p>
+    <p class="m-4">At this point, you've learned enough to really boost your writing skills. During the Conception phase, you've learned about the many kinds of writing styles, experimented with voice, discovered the joy of prompts, and had the opportunity to practice a little bit.</p>
 
-    <div class="row">
-        <div class="col-md-6">
-            <h3 class="m-4">Benefits of Sharing your work:</h3>
+    <p class="m-4">During the Progression phase, you learned tricks to stay motivated, suggestions for overcoming writer's block, and learned useful tactics for making the most of your practice sessions.</p>
 
-            <ul class="m-4">
-                <li>You'll have the opportunity to make someone smile</li>
-                <li>You may recieve helpful tips to improve your work</li>
-                <li>It could get picked up by a literary agent (theoretically at least)</li>
-                <li>Regularly sharing your work can provide greater motivation to practice writing</li>
-            </ul>
-        </div>
-        <div class="col-md-6">
-            <h3 class="m-4">Benefits of NOT sharing your work:</h3>
+    <p class="m-4">During the reflection phase, you learned the importance of gathering feedback and the reasons why rejection isn't actually a bad thing.</p>
 
-            <ul class="m-4">
-                <li>There aren't any</li>
-                <li>You don't have to do any editing (c'mon, that's a lame reason!)</li>
-                <li>You can't make anyone's day - BOOO!</li>
-                <li>Are you still reading? Share your work!</li>
-            </ul>
-        </div>
-    </div>
+    <p class="m-4">It is my hope that these lessons will further your writing abilities and help you in your journey. There's only one thing left to do at this point: practice!</p>
+
+    <p class="m-4">Before ending this journey, let me leave you with a very influential quote from <em>Dead Poet's Society</em>, which may be the greatest movie ever made for writers.</p>
+
+    <blockquote class="blockquote text-center m-4">
+        <p class="mb-0 text-center">No matter what anyone tells you, words and ideas can change the world.</p>
+        <footer class="blockquote-footer">John Keating, <cite title="Source Title">Dead Poet's Society</cite></footer>
+    </blockquote>
+
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Lesson 1: Feedback</a></li>
+            <li class="page-item"><a class="page-link" href="reflection.html">Lesson 1: Feedback</a></li>
             <li class="page-item"><a class="page-link" href="reflection-rejection.html">Lesson 2: Rejection</a></li>
-            <li class="page-item"><a class="page-link" href="reflection-practice.html">Lesson 3: Practice</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#" aria-disabled="true">Lesson 3: Practice</a></li>
         </ul>
     </nav>
 
