--- a/reflection-rejection.html
+++ b/reflection-rejection.html
@@ -93,7 +93,7 @@
         <ul class="pagination justify-content-center">
             <li class="page-item"><a class="page-link" href="reflection.html">Lesson 1: Feedback</a></li>
             <li class="page-item disabled"><a class="page-link" href="r" aria-disabled="true">Lesson 2: Rejection</a></li>
-            <li class="page-item"><a class="page-link" href="#">Lesson 3: Practice!</a></li>
+            <li class="page-item"><a class="page-link" href="reflection-practice.html">Lesson 3: Practice!</a></li>
         </ul>
     </nav>
     
