--- a/progression-practice.html
+++ b/progression-practice.html
@@ -46,17 +46,75 @@
     <!--This might also be a good place to do something creative with hiding and showing content -->
     <!--Or perhaps a carousel or something. -->
 
-    <p class="m-4">Build a habit. If you can find a specific and duration to write everyday, you will be much more likely to actually do it.</p>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
 
-    <p class="m-4">Eliminate distractions. Noise cancelling headphones are awesome for this. The quieter and more focused your time is, the better of you will be.</p>
 
-    <p class="m-4">Take things in chunks. If you get stuck on one section, set it aside and work on another part. It's totally okay to take things nonlinearally if it helps you get everything out of your head.</p>
 
-    <p class="m-4">Set a word limit for yourself. Until you've produced x number of words, it's not time to stop yet. (Start small and gradually increase)</p>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="images/gradient.jpg" alt="First slide">
+                <div class="carousel-caption">
+                    <p class="display-4">Build a habit. <p>
+                            <p class="display-5">If you can find a specific time and duration to write everyday, you will be much more likely to actually do it.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/gradient.jpg" alt="Second slide">
+                <div class="carousel-caption">
+                    <p class="display-4">Eliminate distractions. <p>
+                            <p class="display-5">Noise cancelling headphones are awesome for this. The quieter and more focused your time is, the better of you will be.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/gradient.jpg" alt="Third slide">
+                <div class="carousel-caption">
+                    <p class="display-4">Take things in chunks.<p>
+                            <p class="display-5">If you get stuck on one section, set it aside and work on another part. It's totally okay to take things nonlinearally if it helps you get everything out of your head.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/gradient.jpg" alt="Fourth slide">
+                <div class="carousel-caption">
+                    <p class="display-4">Set word limits.<p>
+                            <p class="display-5">Until you've produced x number of words, it's not time to stop yet. (Start small and gradually increase).</p>
+                </div>
+            </div>
 
-    <p class="m-4">Find a writing buddy! Two heads is always better than one! This can be fun because you can have someone to share your work with when you're finished!</p>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/gradient.jpg" alt="Fifth slide">
+                <div class="carousel-caption">
+                    <p class="display-4">Find a writing buddy!<p>
+                            <p class="display-5">Two heads is always better than one! This can be fun because you can have someone to share your work with when you're finished!</p>
+                </div>
+            </div>
 
-    <p class="m-4">And if you really want accountability, join a writing club! There's lots of other people out there just like you!</p>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/gradient.jpg" alt="Sixth slide">
+                <div class="carousel-caption">
+
+                    <p class="display-4">Join a writing club!<p>
+                            <p class="display-5">If you really want accountability, this is the way to do it. There are lots of other people out there just like you!</p>
+                </div>
+            </div>
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
@@ -71,4 +129,9 @@
     <footer>
         <p class="text-center">&copy; Nathan Hobbs 2020</p>
     </footer>
+
+    <!-- jQuery and Bootstrap links - do not delete! -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- end of do not delete -->
 </body></html>
