--- a/conception-prompts.html
+++ b/conception-prompts.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="The first stage of writing, where you gather ideas and decide what you're going to write about.">
+    <meta name="description" content="This is a place that has a long list of prompts to bolster creativity and promote new ideas.">
     <meta name="author" content="Nathan Hobbs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPlay | Conception - Prompts</title>
@@ -24,7 +24,7 @@
     <!--Navigation-->
     <ul class="nav justify-content-center m-4">
         <li class="nav-item mr-auto text-left">
-            <a class="nav-link text-dark" href="index.html">WordPlay</a>
+            <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" href="conception.html">Conception</a>
