--- a/progression-practice.html
+++ b/progression-practice.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="The second stage of writing, where you do the bulk of your practicing.">
+    <meta name="description" content="Practicing is the only surefire way to improve your writing.">
     <meta name="author" content="Nathan Hobbs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPlay | Progression - Practice</title>
@@ -23,7 +23,7 @@
     <!--Navigation-->
     <ul class="nav justify-content-center m-4">
         <li class="nav-item mr-auto text-left">
-            <a class="nav-link text-dark" href="index.html">WordPlay</a>
+            <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="conception.html">Conception</a>
@@ -54,8 +54,6 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-
-
 
         </ol>
         <div class="carousel-inner">
