--- a/progression.html
+++ b/progression.html
@@ -24,7 +24,7 @@
     <!--Navigation-->
     <ul class="nav justify-content-center m-4">
         <li class="nav-item mr-auto text-left">
-            <a class="nav-link text-dark" href="index.html">WordPlay</a>
+            <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="conception.html">Conception</a>
