--- a/reflection-rejection.html
+++ b/reflection-rejection.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="The third stage of writing, where you evaluate your progress and recieve feedback from others.">
+    <meta name="description" content="Rejection is a natural - and expected - part of writing. Here is why it's a good thing.">
     <meta name="author" content="Nathan Hobbs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPlay | Reflection - Rejection</title>
@@ -23,7 +23,7 @@
     <!--Navigation-->
     <ul class="nav justify-content-center m-4">
         <li class="nav-item mr-auto text-left">
-            <a class="nav-link text-dark" href="index.html">WordPlay</a>
+            <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="conception.html">Conception</a>
