--- a/progression-writers-block.html
+++ b/progression-writers-block.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="The second stage of writing, where you do the bulk of your practicing.">
+    <meta name="description" content="This page has strategies for overcoming writer's block.">
     <meta name="author" content="Nathan Hobbs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPlay | Progression - Writer's Block</title>
@@ -23,7 +23,7 @@
     <!--Navigation-->
     <ul class="nav justify-content-center m-4">
         <li class="nav-item mr-auto text-left">
-            <a class="nav-link text-dark" href="index.html">WordPlay</a>
+            <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="conception.html">Conception</a>
