--- a/reflection-practice.html
+++ b/reflection-practice.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="The third stage of writing, where you evaluate your progress and recieve feedback from others.">
+    <meta name="description" content="At this point, the reader has the tools they need. Now it's just a matter of seizing the day and going for it!">
     <meta name="author" content="Nathan Hobbs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPlay | Reflection</title>
@@ -24,7 +24,7 @@
     <!--Navigation-->
     <ul class="nav justify-content-center m-4">
         <li class="nav-item mr-auto text-left">
-            <a class="nav-link text-dark" href="index.html">WordPlay</a>
+            <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="conception.html">Conception</a>
