--- a/progression-practice.html
+++ b/progression-practice.html
@@ -25,13 +25,13 @@
         <li class="nav-item mr-auto text-left">
             <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item flex-sm-column">
             <a class="nav-link" href="conception.html">Conception</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item flex-sm-column">
             <a class="nav-link active" href="progression.html">Progression</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item flex-sm-column">
             <a class="nav-link" href="reflection.html">Reflection</a>
         </li>
     </ul>
