--- a/progression-writers-block.html
+++ b/progression-writers-block.html
@@ -21,7 +21,7 @@
 <body>
 
     <!--Navigation-->
-    <ul class="nav justify-content-center m-4">
+    <ul class="nav justify-content-center flex-column flex-md-row m-4">
         <li class="nav-item mr-auto text-left">
             <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
