--- a/reflection-practice.html
+++ b/reflection-practice.html
@@ -22,17 +22,17 @@
 <body>
 
     <!--Navigation-->
-    <ul class="nav justify-content-center m-4">
+    <ul class="nav justify-content-center flex-column flex-md-row m-4">
         <li class="nav-item mr-auto text-left">
             <a class="nav-link text-dark" href="index.html">WP</a>
         </li>
-        <li class="nav-item flex-sm-column">
+        <li class="nav-item">
             <a class="nav-link" href="conception.html">Conception</a>
         </li>
-        <li class="nav-item flex-sm-column">
+        <li class="nav-item">
             <a class="nav-link" href="progression.html">Progression</a>
         </li>
-        <li class="nav-item flex-sm-column">
+        <li class="nav-item">
             <a class="nav-link active" href="reflection.html">Reflection</a>
         </li>
     </ul>
