--- a/conception-voice.html
+++ b/conception-voice.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!--Metadata-->
     <meta charset="UTF-8">
     <meta name="description" content="Voice is the way you write, not to be confused with what you are writing about (writing styles).">
     <meta name="author" content="Nathan Hobbs">
@@ -37,9 +38,11 @@
         </li>
     </ul>
 
+    <!--Title-->
     <h1 class="text-center">Conception</h1>
     <h2 class="text-center">Lesson Two: Voice</h2>
 
+    <!--Lesson on voice -->
     <p class="m-4">You've considered writing styles. Now it's time to find your voice. This is what makes you unique, setting you apart from other writers.</p>
 
     <h3 class="m-4">Point of View</h3>
@@ -53,8 +56,6 @@
 
     <h4 class="m-4">3rd Person</h4>
     <p class="m-4">The author narrates the story using he/she. There are three types of 3rd person writing: 1) Third person omniscient - the narrator knows everything about the characters. 2) Third person limited omnisicent - Author sticks closely to one character but stays with 3rd person. This is helpful for controlling what the reader knows. 3) Third person objective - neutral narrator and observational tone.</p>
-
-    
 
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
