--- a/progression-writers-block.html
+++ b/progression-writers-block.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!--Metadata-->
     <meta charset="UTF-8">
     <meta name="description" content="This page has strategies for overcoming writer's block.">
     <meta name="author" content="Nathan Hobbs">
@@ -36,11 +37,14 @@
         </li>
     </ul>
 
+    <!--Title -->
     <h1 class="text-center">Progression</h1>
     <h2 class="text-center">Lesson 2: Beating Writer's Block</h2>
-
+    
+    <!--Summary to catch you up to where you are at this point in your learning-->
     <p class="m-4">The conception phase is all about finding ideas. The first few minutes tend to be a lot of fun, but at somepoint, you're likely to get stuck. The objective of the progression phase is to keep making progress, even when things get difficult. This is the meat of writing - All writer's spend the bulk of their time in this phase. The other two phases are like buns that hold everything together. As a result, this phase is generally the most challenging, but can also be the most rewarding.</p>
 
+    <!--Lesson on Writer's block-->
     <h3 class="m-4">So, what is writer's block exactly?</h3>
 
     <p class="m-4">There's this common misconception that writer's block is not having any ideas. That's a completely wrong way to think about writer's block. There's a big difference between not having <em>any</em> ideas, and not having <em>any idea</em> what to do with your ideas. That is the essence of writer's block. A true writer is going to have many great ideas; connecting them is generally going to be the tricky part.</p>
