--- a/reflection-practice.html
+++ b/reflection-practice.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!--Metadata-->
     <meta charset="UTF-8">
     <meta name="description" content="At this point, the reader has the tools they need. Now it's just a matter of seizing the day and going for it!">
     <meta name="author" content="Nathan Hobbs">
@@ -36,20 +37,24 @@
             <a class="nav-link active" href="reflection.html">Reflection</a>
         </li>
     </ul>
-
+    
+    <!--Title-->
     <h1 class="text-center">Reflection</h1>
     <h2 class="text-center">Lesson 3: Practice!</h2>
 
+    <!--Summary of past lessons-->
     <p class="m-4">At this point, you've learned enough to really boost your writing skills. During the Conception phase, you've learned about the many kinds of writing styles, experimented with voice, discovered the joy of prompts, and had the opportunity to practice a little bit.</p>
 
     <p class="m-4">During the Progression phase, you learned tricks to stay motivated, suggestions for overcoming writer's block, and learned useful tactics for making the most of your practice sessions.</p>
 
     <p class="m-4">During the reflection phase, you learned the importance of gathering feedback and the reasons why rejection isn't actually a bad thing.</p>
 
+    <!--Lesson for what to do next.-->
     <p class="m-4">It is my hope that these lessons will further your writing abilities and help you in your journey. There's only one thing left to do at this point: practice!</p>
 
     <p class="m-4">Before ending this journey, let me leave you with a very influential quote from <em>Dead Poet's Society</em>, which may be the greatest movie ever made for writers.</p>
 
+    <!--End with awesome quote from Dead Poet's Society.-->
     <blockquote class="blockquote text-center m-4">
         <p class="mb-0 text-center">No matter what anyone tells you, words and ideas can change the world.</p>
         <footer class="blockquote-footer">John Keating, <cite title="Source Title">Dead Poet's Society</cite></footer>
