--- a/reflection.html
+++ b/reflection.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!--Metadata-->
     <meta charset="UTF-8">
     <meta name="description" content="The third stage of writing, where you evaluate your progress and recieve feedback from others.">
     <meta name="author" content="Nathan Hobbs">
@@ -37,15 +38,17 @@
         </li>
     </ul>
 
+    <!--Title-->
     <h1 class="text-center">Reflection</h1>
     <h2 class="text-center">Lesson 1: Feedback</h2>
 
     <p class="m-4">Writing is like music: It makes no sense to play so that no one can hear. The only time you should ever write for no one else to see it is if you keeping a journal for the purposes of seeing personal progress. Barring that, it makes ZERO sense to keep your work hidden.</p>
 
+    <!--A listing of the benefits of sharing your work, versus the lack of benefits for deciding not to.-->
     <div class="row">
+        <!--Benefits for sharing-->
         <div class="col-md-6">
             <h3 class="m-4">Benefits of Sharing your work:</h3>
-
             <ul class="m-4">
                 <li>You'll have the opportunity to make someone smile</li>
                 <li>You may recieve helpful tips to improve your work</li>
@@ -53,9 +56,9 @@
                 <li>Regularly sharing your work can provide greater motivation to practice writing</li>
             </ul>
         </div>
+        <!--What happens when you don't share-->
         <div class="col-md-6">
             <h3 class="m-4">Benefits of NOT sharing your work:</h3>
-
             <ul class="m-4">
                 <li>There aren't any</li>
                 <li>You don't have to do any editing (c'mon, that's a lame reason!)</li>
@@ -64,6 +67,7 @@
             </ul>
         </div>
     </div>
+    
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
         <ul class="pagination justify-content-center">
