--- a/progression-practice.html
+++ b/progression-practice.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!--Metadata -->
     <meta charset="UTF-8">
     <meta name="description" content="Practicing is the only surefire way to improve your writing.">
     <meta name="author" content="Nathan Hobbs">
@@ -36,6 +37,7 @@
         </li>
     </ul>
 
+    <!--Title-->
     <h1 class="text-center">Progression</h1>
     <h2 class="text-center">Lesson 3: Practice</h2>
 
@@ -43,9 +45,8 @@
 
     <p class="m-4">Here are some suggestions to make the most of your practice time:</p>
 
-    <!--This might also be a good place to do something creative with hiding and showing content -->
-    <!--Or perhaps a carousel or something. -->
-
+    <!--Carousel with tips -->
+    <!--Carousel naviation at bottom-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -57,6 +58,7 @@
 
         </ol>
         <div class="carousel-inner">
+            <!--Tip 1: Build a habit -->
             <div class="carousel-item active">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="First slide">
                 <div class="carousel-caption">
@@ -64,6 +66,7 @@
                             <p class="display-5">If you can find a specific time and duration to write everyday, you will be much more likely to actually do it.</p>
                 </div>
             </div>
+            <!--Tip 2: Eliminate Distractions-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Second slide">
                 <div class="carousel-caption">
@@ -71,6 +74,7 @@
                             <p class="display-5">Noise cancelling headphones are awesome for this. The quieter and more focused your time is, the better of you will be.</p>
                 </div>
             </div>
+            <!--Tip 3: Take things in chunks.-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Third slide">
                 <div class="carousel-caption">
@@ -78,6 +82,7 @@
                             <p class="display-5">If you get stuck on one section, set it aside and work on another part. It's totally okay to take things nonlinearally if it helps you get everything out of your head.</p>
                 </div>
             </div>
+            <!--Tip 4: Set word limits.-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Fourth slide">
                 <div class="carousel-caption">
@@ -85,7 +90,7 @@
                             <p class="display-5">Until you've produced x number of words, it's not time to stop yet. (Start small and gradually increase).</p>
                 </div>
             </div>
-
+            <!--Tip 5: Find a writing buddy-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Fifth slide">
                 <div class="carousel-caption">
@@ -94,16 +99,17 @@
                 </div>
             </div>
 
+            <!--Tip 6: Join a writing club!-->
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/gradient.jpg" alt="Sixth slide">
                 <div class="carousel-caption">
-
                     <p class="display-4">Join a writing club!<p>
                             <p class="display-5">If you really want accountability, this is the way to do it. There are lots of other people out there just like you!</p>
                 </div>
             </div>
 
-        </div>
+        </div> <!--End inner carousel -->
+        <!--Carousel forward/backward buttons-->
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
