--- a/conception-voice.html
+++ b/conception-voice.html
@@ -49,13 +49,13 @@
     <p class="m-4">If you're a fan of Douglas Adam's <em>Hitchikers Guide to the Galaxy</em>, you may remember the point-of-view gun that makes people see things your way. I would love to have one of those myself, but that's not what Point of View means to writers. In writing, point-of-the view frames how you go about telling a story.</p>
 
     <h4 class="m-4">1st Person POV</h4>
-    <p class="m-4">One of the characters narrates the story</p>
+    <p class="m-4">One of the characters narrates the story.</p>
 
     <h4 class="m-4">2nd Person</h4>
-    <p class="m-4">Structured around the "you" pronoun. Can be surpisingly challenging to write in. Generally used for choose your own adventure style stories, but can be used to draw the writer in and make them feel like they are a part of the story.</p>
+    <p class="m-4">Structured around the "you" pronoun, this perspective can be surpisingly challenging to write in. Generally used for choose-your-own-adventure style stories, but can be used to draw the writer in and make them feel like they are a part of the story.</p>
 
     <h4 class="m-4">3rd Person</h4>
-    <p class="m-4">The author narrates the story using he/she. There are three types of 3rd person writing: 1) Third person omniscient - the narrator knows everything about the characters. 2) Third person limited omnisicent - Author sticks closely to one character but stays with 3rd person. This is helpful for controlling what the reader knows. 3) Third person objective - neutral narrator and observational tone.</p>
+    <p class="m-4">The author narrates the story using he/she. There are three types of 3rd person writing: 1) Third person omniscient - the narrator knows everything about the characters. 2) Third person limited omnisicent - The author sticks closely to one character but stays with 3rd person. This is helpful for controlling what the reader knows. 3) Third person objective - neutral narrator and observational tone.</p>
 
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
