--- a/progression-practice.html
+++ b/progression-practice.html
@@ -41,7 +41,7 @@
     <h1 class="text-center">Progression</h1>
     <h2 class="text-center">Lesson 3: Practice</h2>
 
-    <p class="m-4">You have the tools. Now it's time to keep going and see just what you can do. Practice = progression. Repeat after me: Practice + Practice = More progression. Practice + Practice * Practice = Fantastic progression.</p>
+    <p class="m-4">You have the tools. Now it's time to keep going and see just what you can do. Practice = progression. Practice + Practice = More progression. Practice + Practice * Practice = Fantastic progression.</p>
 
     <p class="m-4">Here are some suggestions to make the most of your practice time:</p>
 
