--- a/progression-writers-block.html
+++ b/progression-writers-block.html
@@ -53,9 +53,9 @@
 
     <!--Potentially put a collapse in a card so you can see the short version and expand into the long version.-->
 
-    <p class="m-4">Take a break and go for a walk. Seriously. The break will help take your mind off the writing, letting you enjoy other aspects of life. Frequently ideas come to as when we least expect it (and generally at really inconveinent times, like when you're trying to sleep or taking a shower). Additionally, the excercise stimulates blood flow to the brain, which is never a bad thing!</p>
+    <p class="m-4">Take a break and go for a walk. Seriously. The break will help take your mind off the writing, letting you enjoy other aspects of life. Frequently ideas come to us when we least expect it (and generally at really inconvenient times, like when you're trying to sleep or taking a shower). Additionally, the excercise stimulates blood flow to the brain, which is never a bad thing!</p>
 
-    <p class="m-4">Listen to music. Inspiration takes place in the wildest of forms. I don't know if there's any scientific evidence here, but I've found that listening to music makes me feel supercharged and capable of anything. I hardly ever write without listening to something.</p>
+    <p class="m-4">Listen to music. Inspiration takes place in the wildest of forms. I've found that listening to music makes me feel supercharged and capable of anything. I hardly ever write without listening to something.</p>
 
     <!--Pagination -->
     <nav aria-label="Page navigation example" class="m-4">
