--- a/reflection-practice.html
+++ b/reflection-practice.html
@@ -43,7 +43,7 @@
     <h2 class="text-center">Lesson 3: Practice!</h2>
 
     <!--Summary of past lessons-->
-    <p class="m-4">At this point, you've learned enough to really boost your writing skills. During the Conception phase, you've learned about the many kinds of writing styles, experimented with voice, discovered the joy of prompts, and had the opportunity to practice a little bit.</p>
+    <p class="m-4">At this point, you've learned enough to really boost your writing skills. During the Conception phase, you learned about the many kinds of writing styles, experimented with voice, discovered the joy of prompts, and had the opportunity to practice a little bit.</p>
 
     <p class="m-4">During the Progression phase, you learned tricks to stay motivated, suggestions for overcoming writer's block, and learned useful tactics for making the most of your practice sessions.</p>
 
