--- a/reflection.html
+++ b/reflection.html
@@ -42,7 +42,7 @@
     <h1 class="text-center">Reflection</h1>
     <h2 class="text-center">Lesson 1: Feedback</h2>
 
-    <p class="m-4">Writing is like music: It makes no sense to play so that no one can hear. The only time you should ever write for no one else to see it is if you keeping a journal for the purposes of seeing personal progress. Barring that, it makes ZERO sense to keep your work hidden.</p>
+    <p class="m-4">Writing is like music: It makes no sense to play so that no one can hear. The only time you should ever write for no one else to see it is if you keep a journal for the purposes of seeing personal progress. Barring that, it makes ZERO sense to keep your work hidden.</p>
 
     <!--A listing of the benefits of sharing your work, versus the lack of benefits for deciding not to.-->
     <div class="row">
@@ -51,7 +51,7 @@
             <h3 class="m-4">Benefits of Sharing your work:</h3>
             <ul class="m-4">
                 <li>You'll have the opportunity to make someone smile</li>
-                <li>You may recieve helpful tips to improve your work</li>
+                <li>You may receive helpful tips to improve your work</li>
                 <li>It could get picked up by a literary agent (theoretically at least)</li>
                 <li>Regularly sharing your work can provide greater motivation to practice writing</li>
             </ul>
