--- a/progression.html
+++ b/progression.html
@@ -53,7 +53,7 @@
 
     <p class="m-4">Short answer: Different strokes for different blokes. There's no one-size-fits-all solution here. However, there are some methods that are often helpful.</p>
 
-    <p class="m-4">Below is a list of short tips for getting that wonderful motivation back. Click the buttons for the expanded view.</p>
+    <p class="m-4">Below is a list of short tips for getting that wonderful motivation back. Click the buttons to learn more.</p>
 
 
     <!--Collapsible buttons that display information about various tips for staying motivated to write.-->
@@ -78,7 +78,7 @@
 
         <div class="collapse" id="makeEnvironmentFun">
             <div class="card card-body text-justify">
-                Keeping your work life separate from your writing life can help create an environment that's conducive to productive writing. If you are writing somewhere you'll enjoy it, you'll be more likely to want to go to your writing place more often. Try writing in a bean bag chair. Or a hammock. Or your bed! Try writing outdoors. You'll know it's a good fit for you when you start to look forward to writing time.
+                Keeping your work life separate from your writing life can help create an environment that's conducive to productive writing. If you are writing somewhere you'll enjoy it, you'll be more likely to want to go to your writing place more often. Try writing in a bean bag chair. Or a hammock. Or your bed! Write in the great outdoors. You'll know it's a good fit for you when you start to look forward to writing time.
             </div>
         </div>
     </div>
